k8s/backend-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend-deployment
  namespace: todo-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: flask-backend
          image: k8s-webapp-demo_backend:latest
          ports:
          - containerPort: 5000
          imagePullPolicy: IfNotPresent
