k8s/db-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: db-deployment
  namespace: todo-app    

spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: postgresql-db
          image: postgres:alpine
          ports:
          - containerPort: 5432
          imagePullPolicy: IfNotPresent
