k8s/frontend-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend-deployment
  namespace: todo-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: k8s-webapp-demo_frontend:latest
          ports:
          - containerPort: 80
          imagePullPolicy: IfNotPresent
